# VelDNS

./: Cargo.toml  README.md  cache.rs  config.rs  config.toml  metrics.rs  static_records.csv
.github/workflows/: CI.yml  build-cross-release.yml  build-debug-artifacts.yml
src/: cache.rs  config.rs  handler.rs  main.rs  server.rs  static_store.rs  upstream.rs
src/tunnel_mask/: client.rs  config.rs  detector.rs  encoder.rs  fragmenter.rs  metrics.rs  mod.rs  server.rs
